--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,8 @@ header {
     background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
-    z-index: 99;}
+    z-index: 99;
+    width: 100%;}
 
 h1 {
     font-family: 'Oswald', sans-serif;
