--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,6 +37,7 @@ h1 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
+    color: #252525;
 }
 
 /* Main content */
