Apply margin-bottom to "lists inside #menu"

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,6 +45,8 @@ h1 {
     list-style-type: none;
 }
 
+#menu >li {margin-bottom: 1em;}
+
 /* Main content */
 main {
     background-color: lightblue;
