--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,7 +50,13 @@ h1 {
 .active {border-bottom: 1px solid #3a3a3a;}
 
 /* navbar styles with dropdown toggle */
-nav {position: absolute;}
+nav {position: absolute;
+    bacckground-color: #ffffff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: o 2px 2px #3a3a3a;
+}
 
 /* Main content */
 main {
