--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,11 +51,12 @@ h1 {
 
 /* navbar styles with dropdown toggle */
 nav {position: absolute;
-    bacckground-color: #ffffff;
+    background-color: #ffffff;
     width: 100%;
     left: 0;
     padding: 0 1rem;
     box-shadow: o 2px 2px #3a3a3a;
+    display: none;
 }
 
 /* Main content */
