Update nav-toggle in styles.css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,20 @@ nav {position: absolute;
     padding: 0 1rem;
     box-shadow: o 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+
+/* Nav toggle */
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 /* Main content */
