--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,7 +81,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    margin-top: 4rem47px;
+    margin-top: 47px;
 }
 
 /* Footer */
