--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -107,9 +107,7 @@ footer {
     #menu > li {
         padding-left: 1rem;}
 
-    .nav-toggle-label {
-            display: none;
-        } 
+    .nav-toggle-label {display: none;} 
     
     #logo {
             font-size: 280%;
