--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,6 +119,7 @@ footer {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
+}
 
     /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
