--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,7 +89,8 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
-    }
+    background-color: lightgreen;
+}
 
 /* Footer */
 #social-networks {
