--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,6 +92,18 @@ main {
     
 }
 
+#cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
