--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,6 +106,11 @@ main {
     position:absolute;
 }
 
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
+
+
 /* Footer */
 #social-networks {
     text-align: center;
