--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,9 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -39,26 +41,32 @@ header {
 }
 
 header a {
-text-decoration: none;
-color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
-#menu {font-size: 110%;
+#menu {
+    font-size: 110%;
     letter-spacing: 4px;
     list-style-type: none;
 }
 
-#menu >li {margin-bottom: 1em;}
+#menu>li {
+    margin-bottom: 1em;
+}
 
-.active {border-bottom: 1px solid #3a3a3a;}
+.active {
+    border-bottom: 1px solid #3a3a3a;
+}
 
 /* navbar styles with dropdown toggle */
-nav {position: absolute;
+nav {
+    position: absolute;
     background-color: #ffffff;
     width: 100%;
     left: 0;
     padding: 0 1rem;
-    box-shadow: o 2px 2px #3a3a3a;
+    box-shadow: 0 2px 2px #3a3a3a;
     display: none;
     top: 100%;
 }
@@ -78,7 +86,7 @@ nav {position: absolute;
 
 /* Main content */
 main {
-    
+
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
@@ -89,8 +97,8 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
-    position:relative;
-    
+    position: relative;
+
 }
 
 #cover-text {
@@ -103,10 +111,11 @@ main {
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
-    position:absolute;
+    position: absolute;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
@@ -145,6 +154,7 @@ main {
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
     /* Header */
     nav {
         display: block;
@@ -158,17 +168,21 @@ main {
         display: flex;
     }
 
-    #menu > li {
-        padding-left: 1rem;}
+    #menu>li {
+        padding-left: 1rem;
+    }
 
-    .nav-toggle-label {display: none;} 
-    
+    .nav-toggle-label {
+        display: none;
+    }
+
     #logo {
-            font-size: 280%;
-            line-height: 75px;
-            margin: 0 0.5rem;
-        }    
-         /* Main content */
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* Main content */
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
@@ -180,39 +194,41 @@ main {
         right: 50px;
     }
 
-     /* Reasons section */
-     #benefits-physical,
-     #benefits-mental {
-         display: flex;
-         flex-direction: column;
-         width: 100%;
-     }
- 
-     #benefits-physical>div,
-     #benefits-mental>div {
-         width: 75%;
-     }
- 
-     #benefits-mental>div {
-         text-align: end;
-         align-self: flex-end;
-     }
-}
-
-    /* Large devices (laptops and desktops, 992px and up) */
-@media screen and (min-width: 992px) {
-    #menu a:hover{
-        border-bottom: 1px solid #3a3a3a;
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
 
-@media screen and (min-width: 1200px) {    
+    #benefits-physical>div,
+    #benefits-mental>div {
+        width: 75%;
+    }
+
+    #benefits-mental>div {
+        text-align: end;
+        align-self: flex-end;
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
     /* Reasons section */
     #benefits {
         display: flex;
         flex-direction: row;
     }
 
-    #benefits > div {
+    #benefits>div {
         flex: 1;
     }
 
@@ -224,11 +240,11 @@ main {
         order: 1;
     }
 
-    #benefits-mental > div {
+    #benefits-mental>div {
         align-self: flex-start;
     }
 
-    #benefits-physical > div {
+    #benefits-physical>div {
         align-self: flex-end;
-    }    
+    }
 }
